# gitlab-flake-bot

./: .gitignore  README.md  flake.nix  package.nix  pyproject.toml  renovate.json
src/gitlab_flake_bot/: __main__.py  flake.py  platform.py  repos.py  settings.py  update.py  utils.py
